# browserbuds.com

./: README.md
api/: api.py  main.py  pyproject.toml
extension/: background.js  browser-polyfill.min.js  content.js  manifest.json  popup.html  popup.js  web-ext.config.js
